# mouse_connectivity_models

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  cm_zack.csv  coveragerc  dependencies  manifest.json  new_manifestol.json  nmf.py  requirements-doc.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.cookiecutter/: .cookiecutter.json  .cookiecutter.yaml
analyses/: 071420_nw_leafsummary.ipynb  072020_homo_majorsummary.ipynb  072020_nw_leafleaf.ipynb  072020_nw_leafsummary.ipynb  073120_leafcompare_3levelmodels.ipynb  080320_homotodos.ipynb  080720_scrnaseqexample.ipynb  081220_homo_major_leafsummary.ipynb  081320_modellingexperiments.ipynb  081420_2stage.ipynb  081420_stefanidea.ipynb  091520_cv_AGAIN.ipynb  092420_oldmodelleaf_newfunctionalism.ipynb  092820_oldmodel_newestfunctionalism.ipynb  093020_newestfunctionality_bestsurface.ipynb  102620_creleafnw_sumleafnw_2stageleaf_2stagesum_summary.ipynb  Untitled.ipynb  (+13 more)
mcmodels/models/trvaep_master/: .gitignore  LICENSE  README.md  pyproject.toml  requirments.txt
mcmodels/models/trvaep_master/example/: multi_condition_sample.ipynb  sample_notebook.ipynb
mcmodels/models/trvaep_master/tests/: test_cvae.py  test_trvae.py  test_vae.py
mcmodels/models/trvaep_master/trvaep/: __init__.py  data_loader.py  pl.py  utils.py
mcmodels/models/trvaep_master/trvaep/model/: __init__.py  _cvae.py  _losses.py  helper_module.py  train.py  utiil.py
(+1341 files in other folders)
