[metadata]
name = voxel_model
author = Joseph Knox
author-email = josephk@alleninsitute.org
summary = Core library for voxel scale mesoscale connectivity model.
description-file = README.md
classifier =
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Science/Research
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.6
        Topic :: Scientific/Engineering :: Bio-Informatics